src/objects/Indicator_Badge__mdt.object
<CustomObject>
    <description>Allows quick, visual summaries based on field values for objects.</description>
    <fields>
        <fullName>Badge_Color__c</fullName>
        <description>HTML Color name for badge background color</description>
        <label>Badge Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DeepPink</fullName>
                    <default>true</default>
                    <label>DeepPink</label>
                </value>
                <value>
                    <fullName>DeepSkyBlue</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>LimeGreen</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Tomato</fullName>
                </value>
                <value>
                    <fullName>Turquoise</fullName>
                </value>
                <value>
                    <fullName>Violet</fullName>
                </value>
                <value>
                    <fullName>YellowGreen</fullName>
                </value>
                <value>
                    <fullName>RosyBrown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Badge_Icon_Name__c</fullName>
        <defaultValue>&apos;standard:announcement&apos;</defaultValue>
        <description>SLDS name of icon to display.</description>
        <inlineHelpText>Should follow &lt;lightning:icon /&gt; naming convention (ex: standard:user, action:freeze_user)</inlineHelpText>
        <label>Badge Icon Name</label>
        <length>55</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comparison_Type__c</fullName>
        <description>Decides kind of logic to be used when evaluating whether or not a badge should be displayed on a record. For more information about comparison types, see Formula Operators and Functions: &apos;Logical Operators&apos; documentation.</description>
        <label>Comparison Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contains</fullName>
                    <default>true</default>
                    <label>Contains</label>
                </value>
                <value>
                    <fullName>Greater or Equal</fullName>
                </value>
                <value>
                    <fullName>Less or Equal</fullName>
                </value>
                <value>
                    <fullName>Blank or Null</fullName>
                </value>
                <value>
                    <fullName>Not Blank or Null</fullName>
                </value>
                <value>
                    <fullName>Use Boolean Value of Field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comparison_Value__c</fullName>
        <label>Comparison Value</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Indicator_Badges</relationshipLabel>
        <relationshipName>Indicator_Badges</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Related_Field__c</fullName>
        <description>Field associated with indicator</description>
        <label>Related Field</label>
        <metadataRelationshipControllingField>Indicator_Badge__mdt.Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Indicator_Badges</relationshipLabel>
        <relationshipName>Indicator_Badges</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>Indicator Badge</label>
    <pluralLabel>Indicator Badges</pluralLabel>
</CustomObject>